@@ -168,16 +168,30 @@ Object.extend(Function.prototype, {
   bind: function() {
     if (arguments.length < 2 && Object.isUndefined(arguments[0])) return this;
     var __method = this, args = $A(arguments), object = args.shift();
-    return function() {
-      return __method.apply(object, args.concat($A(arguments)));
+    
+    // Avoid using Array#concat when only the context argument is given.
+    if (args.length) {
+      return function() {
+        return __method.apply(object, args.concat($A(arguments)));
+      };
     }
+    return function() {
+      return __method.apply(object, arguments);
+    };
   },
   
   bindAsEventListener: function() {
     var __method = this, args = $A(arguments), object = args.shift();
-    return function(event) {
-      return __method.apply(object, [event || window.event].concat(args));
+
+    // Avoid using Array#concat when only the context argument is given.
+    if (args.length) {
+      return function(event) {
+        return __method.apply(object, [event || window.event].concat(args));
+      };
     }
+    return function(event) {
+      return __method.apply(object, [event || window.event]);
+    };
   },
   
   curry: function() {
